# rust-moneymoney

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.github/actions/install-rust-toolchain/: action.yml
.github/workflows/: ci.yml  release.yml
moneymoney-cli/: Cargo.toml  README.md
moneymoney-cli/src/: main.rs
moneymoney-cli/tests/: cli_create_bank_transfer.rs
scripts/: check_version_alignment.py  create_test_accounts.sh  delete_test_accounts.sh  restore_production_moneymoney.sh  run_test_moneymoney.sh
src/: lib.rs  test_utils.rs
src/methods/: add_transaction.rs  create_bank_transfer.rs  create_direct_debit.rs  export_accounts.rs  export_categories.rs  export_portfolio.rs  export_transactions.rs  mod.rs  set_transaction.rs
tests/: integration_tests.rs  roundtrip_tests.rs  test_helpers.rs  test_setup_instructions.md  transaction_plist_schema.rs
tests/fixtures/: transactions.json
tests/fixtures/transaction_exports/: synthetic_full.plist  synthetic_minimal.plist
tests/system_integration/: main.rs  sdef.rs
