[workspace]
members = ["moneymoney-cli"]

# Single source of truth for external dependency versions used by any
# workspace member. Members opt in via `<crate>.workspace = true` and may
# add features per-member; the version pin lives here.
[workspace.dependencies]
chrono = "0.4"
clap = "4.6"
iso_currency = "0.5"
osascript = "0.3"
plist = "1.9"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
uuid = "1.23"

[package]
name = "moneymoney"
version = "0.2.0"
rust-version = "1.62"
description = "AppleScript interface to MoneyMoney app (macOS)"
authors = ["Stefan Grönke <stefan@gronke.net>"]
homepage = "https://github.com/gronke/rust-moneymoney"
repository = "https://github.com/gronke/rust-moneymoney"
readme = "README.md"
license = "MIT"
keywords = ["moneymoney", "applescript", "osascript", "macos"]
categories = ["finance", "os::macos-apis"]
edition = "2021"
include = ["src/**", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
iso_currency = { workspace = true, features = ["with-serde"] }
osascript.workspace = true
plist.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
serde_json.workspace = true

[features]
experimental = []
test-utils = []
