[package]
name = "moneymoney"
version = "0.2.0"
rust-version = "1.85"
description = "AppleScript interface to MoneyMoney app (macOS)"
authors = ["Stefan Grönke <stefan@gronke.net>"]
homepage = "https://github.com/gronke/rust-moneymoney"
repository = "https://github.com/gronke/rust-moneymoney"
readme = "README.md"
license = "MIT"
keywords = ["moneymoney", "applescript", "osascript", "macos"]
categories = ["finance", "os::macos-apis"]
edition = "2021"
include = ["src/**", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"], optional = true }
iso_currency = { version = "0.5", features = ["with-serde"] }
osascript = "0.3"
plist = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
uuid = { version = "1.23", features = ["serde", "v4"] }

[[bin]]
name = "moneymoney"
path = "src/bin/moneymoney.rs"
required-features = ["cli"]

[dev-dependencies]
# Available for #[cfg(test)] lib code regardless of feature selection;
# `cli` also activates serde_json via [dependencies] for the binary.
serde_json = "1.0"

[features]
# `cli` is on by default so `cargo install moneymoney` builds the binary
# without flags. Library consumers who want a lean dep tree (no clap,
# no serde_json runtime dep) opt out with `default-features = false`.
default = ["cli"]
cli = ["dep:clap", "dep:serde_json"]
experimental = []
test-utils = []
