[package]
name = "moneymoney-cli"
version = "0.2.0"
rust-version = "1.85"
description = "Command-line interface to the MoneyMoney macOS app (uses the moneymoney crate)"
authors = ["Stefan Grönke <stefan@gronke.net>"]
homepage = "https://github.com/gronke/rust-moneymoney"
repository = "https://github.com/gronke/rust-moneymoney"
readme = "README.md"
license = "MIT"
keywords = ["moneymoney", "cli", "macos"]
categories = ["command-line-utilities", "finance"]
edition = "2021"

[[bin]]
name = "moneymoney"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
# Internal workspace member — `version` pin enforced by the
# version-alignment CI check and intentionally kept inline (not via
# `[workspace.dependencies]`) so the policy is visible at the call site.
moneymoney = { path = "..", version = "0.2" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
experimental = ["moneymoney/experimental"]
